refactor: session architecture, implement Two-Phase EAGER Load and LAZY Proxy collections
- Dismantled the DefaultSession into single-responsibility components: EntityLoader (read operations), EntityPersister (write operations), and PersistenceContext (first-level cache).
- Introduced the InternalSession interface to encapsulate internal framework operations and hide them from the public API.

- created AbstractLazyCollection with concrete LazyList and LazySet
- lazy data fetching via SimpleQuery.list().
- lazy proxy instantiation to runtime inside ResultSetParser.

- Rewrote solveDeepEagerCollections inside EntityLoader to properly support deep recursive EAGER graphs using Two-Phase Load.
- Protected bidirectional EAGER relationships from StackOverflowError by strictly routing all recursive lookups through the PersistenceContext (First-Level Cache).
- Delegated ToOne EAGER fetching to loader.fillForeignKey(), ensuring dependencies are resolved smoothly during the initial parsing phase.